[package]
name = "leafc_utils"
description = "Utilities for leafc and leafc plugins (e.g. location tracking, string utilities, etc.)"
keywords = ["leafc", "utils", "string", "location", "error", "error-handling"]

version.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

[features]
default = []
all = ["allocative", "serde", "multi-threaded", "no-std"]
allocative = ["dep:allocative"]
serde = ["dep:serde"]
multi-threaded = []
no-std = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_intern = { path = "../leafc_intern", features = ["serde", "allocative"] }
leafc_macros = { path = "../leafc_macros", features = ["serde", "allocative"] }

# Vendored dependencies
# These are vendored because they are not published on crates.io
dupe = { path = "../../third_party/dupe" }

allocative = { workspace = true, optional = true }
amplify = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
distance = { workspace = true }
fxhash = { workspace = true }
gazebo = { workspace = true }
getset = { workspace = true }
hashbrown = { workspace = true }
owo-colors = { workspace = true }
pretty_assertions_sorted = { workspace = true }
rand = { workspace = true }
rusty_ulid = { workspace = true }
smartstring = { workspace = true }
smol_str = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

rand_regex = { workspace = true }
regex_generate = "0.2.1"
