[package]
name = "leafc_lsp"
description = "LSP server implementation for Leaf"
keywords = ["leafc", "ide", "lsp", "language-server"]

version.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

[features]
default = []
all = ["allocative", "serde", "multi-threaded", "no-std"]
allocative = ["dep:allocative"]
serde = ["dep:serde"]
multi-threaded = []
no-std = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Vendored dependencies
# These are vendored because they are not published on crates.io
dupe = { path = "../../third_party/dupe" }

allocative = { workspace = true, optional = true }
amplify = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
fxhash = { workspace = true }
gazebo = { workspace = true }
getset = { workspace = true }
hashbrown = { workspace = true }
owo-colors = { workspace = true }
pretty_assertions_sorted = { workspace = true }
rand = { workspace = true }
rusty_ulid = { workspace = true }
smartstring = { workspace = true }
smol_str = { workspace = true }
str_sim = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
