[package]
name = "leafc_build"
version = "0.1.0"
description = "Build system for leafc"
keywords = ["leafc", "build"]

categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
rstest = { workspace = true }
